fix(ARC-2022): force filter backdrop to fill the full screen on mobile
https://meemoo.atlassian.net/browse/ARC-2022

--- a/src/modules/shared/components/Overlay/Overlay.module.scss
+++ b/src/modules/shared/components/Overlay/Overlay.module.scss
@@ -9,7 +9,7 @@ $overlay-opacity-light: 0.4;
 	pointer-events: none;
 	opacity: 0;
 	position: fixed;
-	inset: 0;
+	inset: 0 0 -200px;
 	background-color: $black;
 
 	@keyframes fade {
